--- a/congrats.html
+++ b/congrats.html
@@ -37,8 +37,8 @@
                                     <i></i>
                                 </label>
                             </div>
-                            <button class="btn btn-outline-dark">Preview in your website <i
-                                    class="material-icons">chevron_right</i></button>
+                            <a href="https://maverickmav.org/css4/" target="_blank" class="btn btn-outline-dark">Preview in your website <i
+                                    class="material-icons">chevron_right</i></a>
                             <hr class="mt-4 mb-4">
                             <h6>SUMMARY</h6>
                             <ul class="summaryPoints">
