changes in onboarding

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
 
-<body>
+<body ng-app="grOnboarding" ng-controller="onBoardController">
   
-  <div class="grOnboarding" ng-app="grOnboarding" ng-controller="onBoardController">
   <div class="guidePageWrapper">
     <i class="circle"></i>
     <header>
@@ -125,7 +124,6 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.js"></script>
   <script src="scripts/main.js"></script>
-  </div>
 </body>
 
 </html>
