add sample modal popup

--- a/setup.html
+++ b/setup.html
@@ -75,7 +75,7 @@
                       </div>
                       <div class="stepWrapper">
                         <h6>Loyalty Points</h6>
-                        <form id="form-points-program">
+                        <form id="form-points-program" class="mb-0">
                           <div class="btn-group btn-group-toggle btnGrpToggle" data-toggle="buttons">
                             <label class="btn btn-outline-dark active">
                               <input type="radio" name="loyaltyPoints" id="fixed" autocomplete="off" ng-model="" checked> Fixed
@@ -135,7 +135,7 @@
                         This feature could boost your sales by <br>200% from our customers reviews
                       </div>
                       <div class="stepWrapper">
-                        <form id="form-signup-bonus">
+                        <form id="form-signup-bonus" class="mb-0">
                           <div class="row">
                             <div class="form-group col-md-6">
                               <label for="welcomeBonus">Welcome Bonus Point</label>
@@ -148,13 +148,13 @@
                             <div class="col-md-5 pr-0">
                               <div class="btn-group btnGrpToggle btnGrpCheck">
                                 <input type="checkbox" id="welcomeNoteMandate">
-                                <label for="welcomeNoteMandate">
+                                <label for="welcomeNoteMandate"class="mb-0">
                                   <span class="btn btn-outline-dark">Show</span>
                                   <span class="btn btn-outline-dark">Hidden</span>
                                 </label>
                               </div>
                             </div>
-                            <a href="#" class="btn btn-link">Sample</a>
+                            <a href="#" class="btn btn-link sampleModalTrigger" data-img="https://picsum.photos/id/1071/640/480">Sample</a>
                           </div>
                           <div class="form-row align-items-center">
                             <div class="form-group col-md-12">
@@ -189,7 +189,7 @@
                     <div class="stepBody">
                       <div class="stepWrapper">
                         <h6>Set Reward Point Value</h6>
-                        <form id="form-payby-points">
+                        <form id="form-payby-points" class="mb-0">
                           <div class="form-row align-items-start">
                             <div class="form-group col-md-2">
                               <div class="input-group-prepend">€</div>
@@ -202,7 +202,7 @@
                                 value="100">
                             </div>
                             <div class="col-md-2 text-center mt-4">
-                              <a href="#" class="btn btn-link">Sample</a>
+                              <a href="#" class="btn btn-link sampleModalTrigger" data-img="https://picsum.photos/id/1082/640/480">Sample</a>
                             </div>                            
                             <label for="pbpRewardpoints" generated="true" class="error col-md-10"></label>
                           </div>
@@ -225,7 +225,7 @@
                     <div class="stepBody">
                       <div class="stepWrapper">
                         <h6>Reward Points for sucessful referrals</h6>
-                        <form id="form-referral-program">
+                        <form id="form-referral-program" class="mb-0">
                           <div class="row">
                             <div class="mt-2 mb-2 form-group col-md-5">
                               <input type="number" class="form-control" id="rpRewardpoints" name="rpRewardpoints"
@@ -321,7 +321,7 @@
                     </div>
                     <div class="stepBody">
                       <div class="stepWrapper">
-                        <form id="form-fb-share">
+                        <form id="form-fb-share" class="mb-0">
                           <div class="form-group mt-0 mb-5 col-md-5">
                             <label for="inputEmail4">Reward Point</label>
                             <input type="number" class="form-control" id="fbRewardPoint" name="fbRewardPoint" value="100">
@@ -329,7 +329,7 @@
                           <div class="form-group mb-5 col-md-12">
                             <label for="inputEmail4">Facebook Share Text</label>
                             <textarea class="form-control" cols="30" rows="3" id="fbSharetxt" name="fbSharetxt">Hey check out my new product.</textarea>
-                            <a href="#" class="btn btn-link mt-2 p-0"><small>Sample</small></a>
+                            <a href="#" class="btn btn-link mt-2 p-0 sampleModalTrigger" data-img="https://picsum.photos/id/1073/640/480"><small>Sample</small></a>
                           </div>
                           <div class="form-group col-md-12 mb-2">
                             <label for="inputEmail4">Connect URL from facebook</label>
@@ -366,7 +366,7 @@
                     </div>
                     <div class="stepBody">
                       <div class="stepWrapper">
-                        <form id="form-tw-share">
+                        <form id="form-tw-share" class="mb-0">
                           <div class="form-group mt-0 mb-5 col-md-5">
                             <label for="inputEmail4">Reward Points</label>
                             <input type="number" class="form-control" id="twRewardPoint" name="twRewardPoint" value="100">
@@ -374,7 +374,7 @@
                           <div class="form-group mb-5 col-md-12">
                             <label for="inputEmail4">Twitter Share Text</label>
                             <textarea class="form-control" cols="30" rows="3" id="twSharetxt" name="twSharetxt">Hey check out my new product.</textarea>
-                            <a href="#" class="btn btn-link mt-2 p-0"><small>Sample</small></a>
+                            <a href="#" class="btn btn-link mt-2 p-0 sampleModalTrigger" data-img="https://picsum.photos/id/1076/640/480"><small>Sample</small></a>
                           </div>
                           <div class="form-group col-md-12 mb-2">
                             <label for="inputEmail4">Connect URL from Twitter</label>
@@ -412,7 +412,7 @@
                     </div>
                     <div class="stepBody pb-0">
                       <div class="stepWrapper">
-                        <form id="form-birthday-rewards">
+                        <form id="form-birthday-rewards" class="mb-0">
                           <div class="row mr-0 ml-0 mt-2 mb-0 align-items-center">
                             <div class="form-group mt-0 mb-0 col-md-5">
                               <label for="bRewards">Reward Point</label>
@@ -470,7 +470,7 @@
                     </div>
                     <div class="stepBody">
                       <div class="stepWrapper">
-                        <form id="form-woo-rewards">
+                        <form id="form-woo-rewards" class="mb-0">
                           <div class="form-group col-md-12 mb-2">
                             <label for="wooRewards">Reward points per review</label>
                             <input type="text" class="form-control" id="wooRewards" name="wooRewards" value="http://www.google.com/product.com">
@@ -506,7 +506,7 @@
                     </div>
                     <div class="stepBody">
                       <div class="stepWrapper">
-                        <form id="form-subscribe">
+                        <form id="form-subscribe" class="mb-0">
                           <div class="form-group mt-0 mb-0 col-md-5">
                             <label for="subscribeRewards">Reward Points</label>
                             <input type="number" class="form-control" id="subscribeRewards" name="subscribeRewards" value="50">
@@ -886,7 +886,7 @@
       </div>
     </footer>
   </div>
-  <div class="setupModal modal fade" id="skipModal" tabindex="-1" role="dialog" aria-labelledby="skipModalLabel"
+  <div class="setupModal modal-1 modal fade" id="skipModal" tabindex="-1" role="dialog" aria-labelledby="skipModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content align-items-center">
@@ -894,6 +894,15 @@
         <h5>You have made some change <br>What should wee do?</h5>
         <a href="congrats.html" class="btn btn-success pr-5 pl-5 mt-4 mb-4">Save and Proceed</a>
         <a href="congrats.html" class="text-success"><u><small>Reset all and LIVE</small></u></a>
+      </div>
+    </div>
+  </div>
+  <div class="setupModal modal-1 modal fade" id="sampleModal" tabindex="-1" role="dialog" aria-labelledby="sampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content align-items-center">
+        <a href="" data-dismiss="modal" aria-label="Close">&times;</a>
+        <img src="">
       </div>
     </div>
   </div>
