--- a/setup.html
+++ b/setup.html
@@ -918,7 +918,7 @@
             </i>
           </button>
           <button class="btn btn-light" id="publishProcess" style="display: none;">
-            Save and Next
+            Save and Publish
             <i class="material-icons">
               keyboard_arrow_right
             </i>
